# API-price

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  update-pricing.yml
docs/: quickstart.md
docs/adr/: 0001-real-time-fx.md  0002-openai-pricing-sync.md
examples/: basic_cost.py  inr_conversion.py  sum_jsonl.py  usage.jsonl
scripts/: update_openai_pricing.py
src/llm_price/: __init__.py  cli.py  currency.py  pricing.py  tokens.py  types.py
src/llm_price.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/llm_price/data/: __init__.py  models.json
tests/: test_pricing.py
