[project]
name = "llm-price"
version = "0.1.1"
description = "Pricing + release metadata and cost estimation for LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Vijay A" }
]
dependencies = [
  "tiktoken>=0.7.0",
  "typer>=0.12.0",
  "requests>=2.32.0",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.6.0", "mypy>=1.10.0"]

[project.urls]
Homepage = "https://github.com/VA24d/API-price"

[project.scripts]
llm-price = "llm_price.cli:app"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E","F","I","B","UP","N"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=68","wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"llm_price.data" = ["models.json"]
